[gd_scene load_steps=8 format=3 uid="uid://duycglnwfyku3"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_5gepb"]
[ext_resource type="AudioStream" uid="uid://rx82kl1a2tb4" path="res://Assets/Sounds/press_x_twice_looped.mp3" id="2_ck3bq"]
[ext_resource type="Texture2D" uid="uid://viu8bupo54xd" path="res://Assets/Sprites/provodnik.png" id="2_gyfow"]
[ext_resource type="Script" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="2_t1otg"]
[ext_resource type="Script" path="res://Scenes/FSM/StateMachine.gd" id="3_4fpsx"]
[ext_resource type="Script" path="res://Scenes/FSM/PlayerController/Moving.gd" id="4_76jk5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppbvu"]
size = Vector2(30, 30)

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_5gepb")

[node name="RhythmNotifier" type="Node" parent="."]
script = ExtResource("2_t1otg")
bpm = 130.0
beat_length = 0.461538

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ppbvu")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ck3bq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gyfow")

[node name="LeftRayCast" type="RayCast2D" parent="."]
target_position = Vector2(-32, 0)

[node name="RightRayCast" type="RayCast2D" parent="."]
target_position = Vector2(32, 0)

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.462

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_4fpsx")
initial_state = NodePath("Moving")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("4_76jk5")
